BuildHughes/translation-tool/inputs/source_meta/objects/Data_Allowance_transaction__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>IF(Account__r.RecordType.DeveloperName = &apos;Location&apos;, Account__r.SAN__c,  
IF(AND(Account__r.RecordType.DeveloperName = &apos;Consumer&apos;, ISPICKVAL(Account__r.Partner_Type__c, &quot;Service Provider&quot;)), Account__r.PartnerId__c,  
IF(AND(Account__r.RecordType.DeveloperName = &apos;Consumer&apos;, ISPICKVAL(Account__r.Partner_Type__c, &quot;SP Distributor&quot;)), Account__r.Parent.PartnerId__c, &apos;&apos;)))</formula>
        <inlineHelpText>SAN in case of a Location Account and Service Provider ID in case of a service provider account.</inlineHelpText>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Could be Location or service provider account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Data_Allowance_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>Indicates a transaction type.</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generate Voucher(s)</fullName>
                </value>
                <value>
                    <fullName>Redeem Voucher</fullName>
                </value>
                <value>
                    <fullName>Void Voucher(s)</fullName>
                </value>
                <value>
                    <fullName>User Registration</fullName>
                </value>
                <value>
                    <fullName>Reverse Voucher(s)</fullName>
                </value>
                <value>
                    <fullName>Redeem Token</fullName>
                </value>
                <value>
                    <fullName>Allocate Token</fullName>
                </value>
                <value>
                    <fullName>De-allocate Token</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Retries_Counter__c</fullName>
        <label>Auto Retries Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Retries_Exhausted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to checked after n-number of retries have failed</inlineHelpText>
        <label>Auto Retries Exhausted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Retries_Last_Attempt__c</fullName>
        <label>Auto Retries Last Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DistributorPartnerId__c</fullName>
        <label>Distributor Partner Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Voucher_Batch_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Voucher Batch Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Voucher_Batch_Downloaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Voucher Batch Downloaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Estimated_Retry_Time__c</fullName>
        <formula>IF(
      (Is_Error__c &amp;&amp; NOT(Auto_Retries_Exhausted__c) &amp;&amp; Auto_Retries_Counter__c &gt; 0),
      (Auto_Retries_Last_Attempt__c + ((Auto_Retries_Counter__c + 1) * Value($Label.Common_Graduated_Retry_Factor))/(60*24)), If(Auto_Retries_Exhausted__c || Not(Is_Error__c),null,Now())
	  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Estimated Retry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>Data_Allowance_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <inlineHelpText>Concatenation of volume, duration, and service plan coming from Product Attribute object.</inlineHelpText>
        <label>Product Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Data_Allowance_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Partner_ID__c</fullName>
        <label>SP Partner ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Quantity__c * Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voucher_Batch_Expiration_Date__c</fullName>
        <inlineHelpText>Indicates Voucher Batch expiration date.</inlineHelpText>
        <label>Voucher Batch Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Batch_ID__c</fullName>
        <inlineHelpText>Indicates Voucher Batch ID returned by Voucher Management System.</inlineHelpText>
        <label>Voucher Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Batch_Name__c</fullName>
        <label>Voucher Batch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Expiration_Date__c</fullName>
        <label>Voucher Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Numbers__c</fullName>
        <inlineHelpText>Indicates Voucher Number(s) or range entered by the user</inlineHelpText>
        <label>Voucher Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_State__c</fullName>
        <inlineHelpText>Indicates where redeem or reverse voucher transaction is at a given moment. Redeem Voucher goes from Provisioned to Redeemed

Reverse Voucher goes from Generated to Reversed</inlineHelpText>
        <label>Voucher State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisioned</fullName>
                </value>
                <value>
                    <fullName>Redeemed</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Allowance Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Error__c</columns>
        <columns>Auto_Retries_Exhausted__c</columns>
        <columns>Voucher_Batch_Name__c</columns>
        <columns>Voucher_Batch_ID__c</columns>
        <columns>Voucher_Numbers__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>Voucher_State__c</columns>
        <columns>Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Is_Voucher_Batch_Activated__c</columns>
        <columns>Is_Voucher_Batch_Downloaded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Redeem_Reverse_User_Reg_Anomaly_Tx</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Voucher_Numbers__c</columns>
        <columns>Voucher_Expiration_Date__c</columns>
        <columns>Voucher_State__c</columns>
        <columns>Is_Error__c</columns>
        <columns>Account__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>Action__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Redeem Voucher,User Registration,Reverse Voucher</value>
        </filters>
        <filters>
            <field>Is_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Auto_Retries_Exhausted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Redeem/Reverse/User Reg. Anomaly Tx</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DAT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Allowance Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>